# cookie-api

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: checks.yml  python-publish.yml
cookie/: __init__.py  api.py  errors.py  models.py
cookie/_internal/: __init__.py  custom_models.py  formatter.py  model_generator.py
cookiebot/: __init__.py  api.py  classes.py  errors.py  models.py
docs/: conf.py  index.rst  requirements.txt
docs/cookie/: api.rst  errors.rst  examples.rst  models.rst
docs/cookiebot/: api.rst  errors.rst  examples.rst  models.rst
examples/: async.py  example.env  images.py  sync.py
requirements/: dev.txt  docs.txt  requirements.txt
tests/: test_api.py
