[project]
name = "cookiebot"
description = "An API wrapper for the CookieBot API"
requires-python = ">=3.9"
license = {text = "MIT"}
readme = "README.md"
keywords = ["cookie-bot", "cookie", "api"]
authors = [
    { name = "tibue99" }, { name="tobfd" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
version = {attr = "cookiebot.__version__"}
dependencies = {file = "requirements.txt"}

[project.urls]
GitHub = "https://github.com/tibue99/cookie-api"
CookieBot = "https://cookie-bot.xyz"
Documentation = "https://cookiebot.readthedocs.io"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
